--- a/demo/index.html
+++ b/demo/index.html
@@ -28,8 +28,9 @@
             </div>
         </div>
         <script src="../node_modules/quill/dist/quill.js"></script>
-        <!--<script src="../dist/quill-emoji.js"></script>-->
-        <script src="../dist/quill-html-viewer.js"></script>
+        <!--<script src="../dist/quill-emoji.js"></script>
+        <script src="../dist/quill-html-viewer.js"></script>-->
+        <script src="../src/module-html-viewer.js"></script>
         <script type="text/javascript">
           var toolbarOptions = {
             container: [
